# factordb

./: .gitignore  Cargo.toml  README.md  core_schema.yaml  flake.nix  schema.json
examples/: Cargo.toml
factdb/: Cargo.toml
factdb/src/: lib.rs  prelude.rs
factor_cli/: Cargo.toml
factor_cli/src/: main.rs
factor_core/: Cargo.toml
factor_core/src/: db.rs  error.rs  lib.rs  prelude.rs  registry.rs  simple_db.rs  tests.rs
factor_core/src/backend/: log.rs  memory.rs  mod.rs
factor_core/src/backend/log/: mod.rs
factor_core/src/backend/memory/: mod.rs  store.rs
factor_core/src/data/: id.rs  ident.rs  map.rs  mod.rs  patch.rs  time.rs  value_type.rs
factor_core/src/data/value/: map.rs  mod.rs  serde_deserialize.rs
factor_core/src/query/: migrate.rs  mod.rs  mutate.rs  select.rs  sql.rs
factor_core/src/schema/: attribute.rs  builtin.rs  class.rs  commit.rs  dsl.rs  entity.rs  index.rs  logic.rs  mod.rs
factor_engine/: Cargo.toml
factor_engine/examples/: basic.rs  derive.rs
factor_engine/src/: db.rs  lib.rs  schema_builder.rs  tests.rs
factor_engine/src/backend/: mod.rs  query_planner.rs
factor_engine/src/backend/log/: convert_json.rs  event.rs  mod.rs  store_file.rs  store_memory.rs
factor_engine/src/backend/memory/: index.rs  interner.rs  memory_data.rs  mod.rs  store.rs
factor_engine/src/plan/: expr_optimize.rs  mod.rs  optimizers.rs
factor_engine/src/registry/: attribute_registry.rs  entity_registry.rs  index_registry.rs  mod.rs
factor_engine/src/util/: mod.rs  stable_map.rs  vec_set.rs
factor_macros/: Cargo.toml
factor_macros/src/: attribute.rs  class.rs  entity.rs  lib.rs
factor_macros/tests/: test_macros.rs
factor_sqlite/: Cargo.toml
factor_sqlite/src/: lib.rs  pool.rs
factor_tests/: .gitignore  Cargo.toml
factor_tests/benches/: memory.rs
factor_tests/src/: lib.rs  main.rs
factor_tools/: Cargo.toml
factor_tools/src/: rust.rs  typescript.rs
factordb/: Cargo.toml
factordb/examples/: basic.rs  derive.rs
factordb/src/: db.rs  error.rs  lib.rs  prelude.rs  registry.rs  tests.rs
factordb/src/backend/: mod.rs  query_planner.rs
factordb/src/backend/log/: convert_json.rs  event.rs  log_memory.rs  mod.rs  store_file.rs
factordb/src/backend/memory/: index.rs  interner.rs  memory_data.rs  mod.rs  store.rs
factordb/src/data/: id.rs  ident.rs  map.rs  mod.rs  patch.rs  reference.rs  time.rs  value_type.rs
factordb/src/data/value/: de.rs  map.rs  mod.rs  patch.rs  ser.rs  serde_deserialize.rs  serde_serialize.rs
factordb/src/query/: expr.rs  migrate.rs  mod.rs  mongo.rs  mutate.rs  select.rs  sql.rs  update.rs
factordb/src/registry/: attribute_registry.rs  entity_registry.rs  index_registry.rs  mod.rs
factordb/src/schema/: attribute.rs  builtin.rs  entity.rs  index.rs  logic.rs  mod.rs
factordb/src/util/: mod.rs  stable_map.rs
