[workspace]
resolver = "2"

members = [
    "factor_core",
    "factdb",
    "factor_engine",
    "factor_macros",
    "factor_tools",
    "factor_tests",
    "./examples",

    # Backends
    # Disabled: not functional
    # also needs deadpool-sqlite to upgrade to rusqlite 0.26
    #"factor_sqlite",
]
