[package]
name = "factor_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

factdb = { path = "../factdb" }
factor_engine = { path = "../factor_engine" }
futures = "0.3.23"
serde = { version = "1.0.143", features = ["derive"] }
anyhow = "1.0.62"
tracing-subscriber = { version = "0.3.15", features = ["fmt"] }
