[package]
name = "factor_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factdb = { path = "../factdb" }
factor_engine = { path = "../factor_engine" }

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true

tracing-subscriber = { version = "0.3.15", features = ["fmt"] }
