[package]
name = "factdb"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sql", "mongodb-query", "unstable"]

sql = ["sqlparser"]
mongodb-query = ["mongodb-language-model"]

jsonschema = ["factor_core/jsonschema"]
typescript-schema = ["factor_core/typescript-schema"]

unstable = []

[dependencies]
factor_core = { version = "0.1", path = "../factor_core"}
factor_macros = { version = "0.1", path = "../factor_macros" }

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }

chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
ordered-float = { version = "3.0.0", features = ["serde"] }
sqlparser = { version = "0.21.0", optional = true }
# FIXME: use normal crate once https://github.com/GREsau/schemars/pull/141 is merged upstream.
schemars = { version = "0.8.10", features = ["chrono", "uuid1", "url", "ordered-float"], optional = true, git = "https://github.com/theduke/schemars", branch = "ordered-float" }
# FIXME: use normal crate once https://github.com/Aleph-Alpha/ts-rs/pull/97 is merged upstream.
ts-rs = { version = "6.1.2", features = ["chrono-impl", "uuid-impl", "ordered-float-impl"], optional = true, git = "https://github.com/theduke/ts-rs", branch = "theduke" }
mongodb-language-model = { version = "0.1.6", optional = true}

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
pretty_assertions = "1.2.1"
