[package]
name = "factor_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
factor_tools = { version = "0.1.0", path = "../factor_tools" }
