[package]
name = "factor_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory", "log", "log_fs"]
memory = []
log = ["memory"]
log_fs = ["tokio", "tokio-stream"]


[dependencies]
factor_core = { version = "0.1.0", path = "../factor_core" }

anyhow = { version = "1.0.58" }
chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
futures = "0.3.21"
ordered-float = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

url = { version = "2.2.2", features = ["serde"] }
sqlparser = "0.21.0"

tokio = { version = "1.19.2", optional = true, features = ["fs", "sync", "io-util"] }
tokio-stream = { version = "0.1.9", optional = true, features = ["io-util"] }
regex = "1.5.6"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber = "0.3.11"
