[package]
name = "factor_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory", "log", "log_fs"]
memory = []
log = ["memory"]
log_fs = ["tokio", "tokio-stream"]


[dependencies]
factor_core = { version = "0.1.0", path = "../factor_core" }

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, optional = true, features = ["fs", "sync", "io-util"] }
futures.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }

chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
ordered-float = { version = "3.0.0", features = ["serde"] }
sqlparser = "0.21.0"
tokio-stream = { version = "0.1.9", optional = true, features = ["io-util"] }
regex = "1.5.6"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = "0.3.11"
