[package]
name = "factor_macros"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = "1.0.81"

[dev-dependencies]
factordb = { path = "../factordb" }
serde = "1.0.130"
serde_json = "1.0.68"
