[package]
name = "factor_macros"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.36"
quote = "1.0.17"
syn = "1.0.90"

[dev-dependencies]
factordb = { path = "../factordb" }
serde = "1.0.136"
serde_json = "1.0.79"
