[package]
name = "factor_macros"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = "1.0.98"

[dev-dependencies]
factordb = { path = "../factordb" }
factor_core = { path = "../factor_core" }

serde = "1.0.137"
serde_json = "1.0.81"
