[package]
name = "factor_sqlite"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = ["rusqlite/bundled"]
# bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
default = ["bundled"]

[dependencies]
rusqlite = { version = "0.25.3", features = ["uuid"] }
deadpool = { version = "0.8.0", features = ["managed", "rt_tokio_1"], default-features = false }
deadpool-sqlite = "0.1.0"
factor_core = { path = "../factor_core" }
futures = "0.3.15"
async-trait = "0.1.50"
tokio = { version = "1.6.1", features = ["macros"] }
anyhow = "1.0.41"
serde_json = "1.0.64"
