[package]
name = "factor_sqlite"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = ["rusqlite/bundled"]
# bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
default = ["bundled"]

[dependencies]
factdb = { path = "../factdb" }

anyhow.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros"] }

rusqlite = { version = "0.26.1", features = ["uuid"] }
deadpool = { version = "0.9.1", features = ["managed", "rt_tokio_1"], default-features = false }
deadpool-sqlite = "0.3.0"
async-trait = "0.1.51"
