[package]
name = "factor_tests"
version = "0.1.0"
edition = "2018"

[[bench]]
name = "memory"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factordb = { path = "../factordb" }
factor_engine = { path = "../factor_engine" }

criterion = { version = "0.3.5", features = ["async_futures"] }
futures = "0.3.21"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
uuid = "0.8.2"

[dev-dependencies]
criterion = "0.3.5"
