[package]
name = "factor_tests"
version = "0.1.0"
edition = "2018"

[[bench]]
name = "memory"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factdb = { path = "../factdb" }
factor_engine = { path = "../factor_engine" }
factor_core = { path = "../factor_core" }

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
uuid.workspace = true

criterion = { version = "0.3.5", features = ["async_futures"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.5"
