[package]
name = "factor_tools"
version = "0.1.0"
description = "Auxiliary tooling for factordb"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.41"
factordb = { path = "../factordb" }
