[package]
name = "factor_tools"
version = "0.1.0"
description = "Auxiliary tooling for factordb"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factor_core = { path = "../factor_core" }

anyhow.workspace = true
serde_json.workspace = true

serde_path_to_error = "0.1.8"
Inflector = "0.11.4"
