[package]
name = "factordb"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory", "log", "log_fs"]
memory = []
log = ["memory"]
log_fs = ["tokio", "tokio-stream"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
futures = "0.3.21"
ordered-float = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.32"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

factor_macros = { version = "0.1", path = "../factor_macros" }
url = { version = "2.2.2", features = ["serde"] }
typescript-type-def = "0.4.1"
sqlparser = "0.15.0"

tokio = { version = "1.17.0", optional = true, features = ["fs", "sync", "io-util"] }
tokio-stream = { version = "0.1.8", optional = true, features = ["io-util"] }
regex = "1.5.5"

[dev-dependencies]
tracing-subscriber = { version = "0.3.10", features = ["fmt"] }
tokio = { version = "1.17.0", features = ["full"] }
