[package]
name = "factordb"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jsonschema = ["schemars"]
typescript-schema = ["ts-rs"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
futures = "0.3.21"
ordered-float = { version = "3.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.32"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
factor_macros = { version = "0.1", path = "../factor_macros" }
url = { version = "2.2.2", features = ["serde"] }
typescript-type-def = "0.4.1"
sqlparser = "0.16.0"
# FIXME: use normal crate once https://github.com/GREsau/schemars/pull/141 is merged upstream.
schemars = { version = "0.8.8", features = ["chrono", "uuid", "url", "ordered-float"], optional = true, git = "https://github.com/theduke/schemars", branch = "ordered-float" }
# FIXME: use normal crate once https://github.com/Aleph-Alpha/ts-rs/pull/97 is merged upstream.
ts-rs = { version = "6.1.2", features = ["chrono-impl", "uuid-impl", "ordered-float-impl"], optional = true, git = "https://github.com/theduke/ts-rs", branch = "theduke" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.10", features = ["fmt"] }
tokio = { version = "1.17.0", features = ["full"] }
