[package]
name = "factordb"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jsonschema = ["schemars"]
typescript-schema = ["ts-rs"]

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
futures = "0.3.21"
ordered-float = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
factor_macros = { version = "0.1", path = "../factor_macros" }
url = { version = "2.2.2", features = ["serde"] }
sqlparser = "0.18.0"
# FIXME: use normal crate once https://github.com/GREsau/schemars/pull/141 is merged upstream.
schemars = { version = "0.8.10", features = ["chrono", "uuid1", "url", "ordered-float"], optional = true, git = "https://github.com/theduke/schemars", branch = "ordered-float" }
# FIXME: use normal crate once https://github.com/Aleph-Alpha/ts-rs/pull/97 is merged upstream.
ts-rs = { version = "6.1.2", features = ["chrono-impl", "uuid-impl", "ordered-float-impl"], optional = true, git = "https://github.com/theduke/ts-rs", branch = "theduke" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
tokio = { version = "1.19.2", features = ["full"] }
